# scopy

./: CMakeLists.txt
.github/workflows/: androidbuild.yml  dockerimage.yml  linuxflatpackbuild.yml
CI/appveyor/: build_appveyor_macos.sh  build_appveyor_mingw.sh  inside_flatpak_docker.sh  install_msys_deps.sh
app/: main.cpp  mainwindow.cpp
cmake/: doxygen.cmake
core/: CMakeLists.txt
core/include/scopy/core/: context_enumerator.hpp  data_sink.hpp  data_source.hpp  hardware_resource.hpp  plugin_interface.hpp  plugin_manager.hpp  tool_interface.hpp
core/src/: context_enumerator.cpp  data_sink.cpp  data_source.cpp  hardware_resource.cpp  plugin_manager.cpp
gui/include/scopy/gui/: tool_launcher.hpp
gui/resources/stylesheets/themes/: default-theme.qss
gui/src/: scopy_about_dialog.cpp  tool_launcher.cpp  trigger_settings.cpp
plugins/: CMakeLists.txt
plugins/demo/: CMakeLists.txt  demo_data_source.cpp  demo_data_source.hpp  demo_plugin.cpp  demo_plugin.hpp  demo_tool.cpp  demo_tool.hpp
plugins/m2ktoolpack/: CMakeLists.txt  m2k_tool_pack.cpp  m2k_tool_pack.hpp
plugins/m2ktoolpack/src/: channel_widget.cpp  channel_widget.hpp  detachdragzone.cpp  oscilloscope.cpp  signal_generator.cpp  spinbox_a.cpp  tool.cpp  tool.hpp
plugins/m2ktoolpack/src/logicanalyzer/: logic_analyzer.cpp
resources/: filter.json
resources/stylesheets/: default.qss  light.qss
src/: DisplayPlot.h  FftDisplayPlot.cc  FftDisplayPlot.h  dbgraph.hpp  dmm.cpp  dmm.hpp  fft_block.cpp  grport.cpp  grport.h  grsource.cpp  grsource.h  iio_manager.cpp  iio_manager.hpp  iiosource.cpp  iiosource.h  m2ksource.cpp  m2ksource.h  network_analyzer.cpp  network_analyzer.hpp  oscilloscope.cpp  oscilloscope.hpp  oscilloscope_api.cpp  oscilloscope_plot.cpp  oscilloscope_plot.hpp  preferences.cpp  scope_sink_f_impl.cc  signal_generator.cpp  spectrum_analyzer.cpp  spectrum_analyzer.hpp  stream_to_vector_overlap_impl.cc  timeout_block.hpp  tool.cpp  tool_launcher.cpp  tool_launcher.hpp  toolmenu.h  topblock.cpp  topblock.h  topblockmanager.cpp  topblockmanager.h  wavsrc_experimental.cpp  (+1 more)
src/logicanalyzer/: logic_analyzer.cpp
src/patterngenerator/: pattern_generator.cpp
src/patterngenerator/patterns/: patterns.cpp
ui/: logic_analyzer.ui
